tests/ui/higher-ranked/structually-relate-aliases.stderr
error[E0277]: the trait bound `for<'a> T: ToUnit<'a>` is not satisfied
  --> $DIR/structually-relate-aliases.rs:13:36
   |
LL | impl<T> Overlap<for<'a> fn(&'a (), Assoc<'a, T>)> for T {}
   |                                    ^^^^^^^^^^^^ the trait `for<'a> ToUnit<'a>` is not implemented for `T`
   |
help: consider restricting type parameter `T` with trait `ToUnit`
   |
LL | impl<T: for<'a> ToUnit<'a>> Overlap<for<'a> fn(&'a (), Assoc<'a, T>)> for T {}
   |       ++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
